Fix #151: pause icon misaligned in mini-controls toolbar

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -668,7 +668,7 @@
 	}
 
 	.play-pause + label {
-		transform: rotate(180deg);
+		transform: rotate(360deg);
 		transition-duration: var(--quick);
 	}
 
